# SOL-ExecBench

./: .gitignore  README.md  docker.sh  pyproject.toml
docker/: Dockerfile
docs/: definition.md  solution.md  workload.md
examples/: run_problem.py
scripts/: calibrate.py  download_flashinfer_trace.sh  update_quant_tolerances.py  verify.py
src/sol_execbench/: __init__.py  evaluator.py  sol_score.py  solution_parser.py  utils.py
src/sol_execbench/bench/: __init__.py  benchmark.py  correctness.py  execution_device.py  timing.py  utils.py
src/sol_execbench/data/: __init__.py  definition.py  dtypes.py  json_utils.py  shapes.py  solution.py  trace.py  trace_set.py  workload.py
src/sol_execbench/driver/: problem_packager.py
tests/: conftest.py  test_api.py
tests/bench/: test_correctness.py  test_device.py
tests/data/: test_definition.py  test_shapes.py  test_solution.py  test_trace.py  test_trace_set.py  test_workload.py
tests/docker/dependencies/: _cutedsl_kernels.py  test_cuda.py  test_cudnn.py  test_cudnn_frontend.py  test_cutedsl.py  test_cutile.py  test_cutlass.py  test_triton.py
tests/examples/: test_examples.py
tests/samples/flux_rope/: solution_cuda.json
tests/samples/gemma3_swiglu/: solution_python.json
tests/samples/jamba_attn_proj/: solution_cute_dsl.json  solution_cutile.json
tests/samples/moe_index_add/: definition.json  reference.py  workload.jsonl
tests/samples/nemotron_rms_norm/: solution_triton.json
tests/samples/olmo3_post_norm/: solution_triton.json
tests/samples/rmsnorm/: definition.json  solution_cuda.json  (+1 more)
(+33 files in other folders)
